# Video-Panda

./: .gitignore  README.md  TRAIN_AND_VALIDATE.md  index.html  pyproject.toml
scripts/videopanda/: slurm_sbatch_launcher.sh  slurm_videopanda_7b_all.sh  videopanda_finetune.sh  videopanda_prealign.sh  videopanda_pretrain.sh
scripts/videopanda/eval/: eval_qa_activitynet.sh  eval_qa_msrvtt.sh  eval_qa_msvd.sh  eval_qa_tgif.sh  run_qa_activitynet.sh  run_qa_msrvtt.sh  run_qa_msvd.sh  run_qa_tgif.sh
videopanda/: __init__.py  constants.py  conversation.py  mm_utils.py  utils.py
videopanda/config/: config.json
videopanda/config/videopanda-video-LB-patch14-anypixel-448/: preprocessor_config.json
videopanda/config/videopanda-vision-LB-patch14-anypixel-448/: preprocessor_config.json
videopanda/eval/video/: eval_benchmark_1_correctness.py  eval_benchmark_2_detailed_orientation.py  eval_benchmark_3_context.py  eval_benchmark_4_temporal.py  eval_benchmark_5_consistency.py  eval_video_qa.py  run_inference_benchmark_consistency.py  run_inference_benchmark_general.py  run_inference_video_qa.py  run_inference_video_qa_act.py
videopanda/model/: __init__.py  builder.py  dataloader.py  videopanda_arch.py
videopanda/model/language_model/: videopanda_llama.py
videopanda/model/multimodal_encoder/: builder.py  vision_tokenizer.py
videopanda/model/multimodal_encoder/languagebind/: __init__.py
videopanda/model/multimodal_projector/: builder.py
videopanda/train/: train.py  train_mem.py  train_xformers.py  videopanda_trainer.py
(+3 files in other folders)
