[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "videopanda"
version = "1.0.0"
description = "Video-Panda: Parameter-efficient Alignment for Encoder-free Video-Language Models."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.1.0", "torchvision==0.16.0",
    "transformers==4.31.0", "tokenizers>=0.12.1,<0.14", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.21.0", "peft==0.4.0", "bitsandbytes==0.41.0", "xformers==0.0.21",
    "markdown2[all]", "numpy", "scikit-learn==1.2.2", "urllib3==1.26.0",
    "gradio==4.5.0", "requests", "httpx==0.24.0", "uvicorn", "fastapi","ftfy",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13", "prettytable", "openpyxl"
]

[project.optional-dependencies]
train = ["deepspeed", "ninja", "wandb", "tensorboardX"]

[project.urls]
"Homepage" = "https://videopanda.github.io/"
"Bug Tracker" = "https://github.com/jh-yi/Video-Panda/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
